# webRAG

./: .gitignore  README.md  SECURITY.md  blank.env  config.py  docker-compose.yml  pyproject.toml  pyrightconfig.json
docs/: architecture.md  data_flow.md  firecrawl.md  ingest_flow.md  progress.md
docs/decisions/: embeddings.md  reranking.md  vector-db.md
specs/: 00_ingestion.md  01_indexing.md  02_retrieval.md  03_orchestration.md  04_mcp-interface.md  05_orchestration.md
specs/01_ingestion/: 00_ingestion.md  00_ingestion_service.md
specs/02_indexing/: 02_indexing_design.md  02_indexing_implementation.md
specs/03_retrieval/: 03_retrieval.md
specs/04_orchestration/: 04_orchestration_design.md
specs/05_mcp/: mcp_layer_design.md
src/01_ingestion/: firecrawl_client.py  links.py  service.py
src/02_indexing/: chunker.py  embedder.py  indexer.py  models.py  schema.py
src/03_retrieval/: citations.py  models.py  search.py
src/04_orchestration/: engine.py  evaluator.py  expander.py  locality.py  merger.py  models.py  query_analyzer.py  reranker.py
src/05_mcp_server/: __main__.py  errors.py  formatter.py  html_converter.py  server.py  tools.py
src/indexing/: chunker.py  embedder.py  indexer.py  schema.py
src/ingestion/: firecrawl_client.py  service.py
tests/: conftest.py  test_chunker_images.py  test_firecrawl_batch_output.py  test_firecrawl_client.py  test_indexing.py  test_mcp_errors.py  test_mcp_formatter.py  test_mcp_html_converter.py  test_orchestration_integration.py  test_orchestration_unit.py  test_retrieval.py  test_service.py
(+2 files in other folders)
