[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webrag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py==4.16.0",
    "python-dotenv",
    "pytest",
    "psycopg[binary]",
    "pgvector",
    "openai",
    "tiktoken",
    "transformers",
    "beautifulsoup4",
    "lxml",
    "pydantic",
    "pydantic-settings",
]

[tool.setuptools.packages.find]
where = ["."]
