[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webrag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py==4.16.0",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "psycopg[binary]",
    "psycopg-pool",
    "pgvector",
    "openai",
    "tiktoken",
    "transformers",
    "beautifulsoup4",
    "lxml",
    "pydantic",
    "pydantic-settings",
    "zeroentropy",
    "cohere",
    "httpx",
]

[tool.setuptools]
packages = [
    "src",
    "src.ingestion",
    "src.indexing",
    "src.retrieval",
    "src.orchestration",
    "src.mcp_server",
]

[tool.setuptools.package-dir]
"src" = "src"
"src.ingestion" = "src/01_ingestion"
"src.indexing" = "src/02_indexing"
"src.retrieval" = "src/03_retrieval"
"src.orchestration" = "src/04_orchestration"
"src.mcp_server" = "src/05_mcp_server"
